
	Now `formula` takes a one-sided formula describing the constraints.
	Variables will be looked up inside the object passed to `env`. As
	such, `env` needs to be a data frame or an object accepted as the
	`data` argument in `model.frame()`.

	The `fitted` method has changed slightly. The `type` argument
	has been renamed `which`.

	* scores: new method for objects of class "timetrack".

	* distanceX: experimental replacement for distance() which uses
	fast C code for computing dissimilarities via a .Call interface
	based on base::dist().

	Currently only the single matrix code has an R interface and
	`method = "mixed"` is not hooked up at the moment. It is intended
	that the next version of analogue (0.12-x) will have this version
	of the code replace the old mainly R-based distance().

Version 0.11-1

	* scores.prcurve: new function to extract "axis" scores for
	samples on the fitted principal curve.

	* lines.prcurve: new lower-level plotting function allows
	a fitted principal curve to be added to an existing PCA
	plot.

	* prcurve, smoothSpline: `prcurve` now returns a component
	`smooths`, a list containing the fitted smoothers, one per
	variable. As a result `smoothSpline` now also returns the
	fitted `smooth.spline` model.

	* gradientDist: the "prcurve" method was ordering the samples
	such that they were smooth. No need for the `order` argument
	now either.

	* Namespace: simplified the import from lattice. Added more
	imports from grid as this package no-longer in Dependencies.

	* Dependencies: grid moved to Imports:

	* distx.c: Uninitialised variable use reported on MacOS X under
	the clang compiler. Reported by Brian Ripley.

	* Maintainer: Updated the maintainer email address.

Version 0.11-0

	* timetrack: fitted method gains argument `choices` with
	default `1:2` for extracting the ordinary or passive
	samples scores on `choices` axes. `plot` method can now draw
	the passive samples as a line, points or both. The `plot`